--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Aladin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animate.css">
     <title></title>
   </head>
   <body>
+    <audio id="mysoundclip" preload="auto">
+    <source src="sticks.mp3"></audio>
+    <h1>Tower of Hanoi</h1>
 <div class ="alltowers">
     <div class = "tower1"></div>
     <div class = "tower2"></div>
     <div class = "tower3"></div>
 </div>
+<h2 class ="animated once fadeIn">Created<br> by<br> <span>Mason Brown<span><h2>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src = "script.js"></script>
   </body>
