--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class = "tower2"></div>
     <div class = "tower3"></div>
 </div>
-
+<div id ="score"></div>
 <h2 class ="animated once fadeIn">Created<br> by<br> <span>Mason Brown<span><h2>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src = "script.js"></script>
