--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.css">
-    <title></title>
+    <title>Tower of Hanoi</title>
   </head>
   <body>
     <audio id="mysoundclip" preload="auto">
@@ -28,7 +28,7 @@
     <div class = "tower3"></div>
 </div>
 <div id ="score"></div>
-<h2 class ="animated once fadeIn">Created<br> by<br> <span>Mason Brown<span><h2>
+<h2 class ="animated once fadeIn">Created<br> by<br> Mason Brown</h2>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src = "script.js"></script>
   </body>
